--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <![endif]-->
   </head>
   <body>
-    {% include header.html %
+    {% include header.html %}
     {{ content }}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
