--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     {% include header.html %}
+    {% include navbar.html %}
     {{ content }}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
