--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="padding-top:70px">
+    
     {% include navbar.html %}
     {% include header.html %}
     {{ content }}
