--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     {% include navbar.html %}
     {% include header.html %}
     {{ content }}
+    {% include footer.html %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
