--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@
     <![endif]-->
   </head>
   <body style="padding-top:70px">
-    
-    {% include navbar.html %}
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
-
+    <div id="wrap">
+      {% include navbar.html %}
+      {% include header.html %}
+      {{ content }}
+      {% include footer.html %}
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
