--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<div id="sticky-footer">
   <div class="container"
     <p class="credit">
       <a href="#">Queen's University Belfast</a>
