--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div id="sticky-footer" style="position:fixed">
+<div id="sticky-footer" style="position:absolute">
   <div class="container"
     <p class="credit">
       <a href="#">Queen's University Belfast</a>
