--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,10 @@
-<div id="sticky-footer" style="position:absolute">
+<div id="sticky-footer"
+  style="position: absolute;
+         bottom: 0;
+         width: 100%;
+        /* Set the fixed height of the footer here */
+        height: 60px;
+        background-color: #f5f5f5;">
   <div class="container"
     <p class="credit">
       <a href="#">Queen's University Belfast</a>
