--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-  style="position: relative;
-         min-height: 100%;">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +22,6 @@
       {% include header.html %}
       {{ content }}
     </div>
-    {% include footer.html %}
     <!-- JavaScript -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
