--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,8 @@
-<div id="sticky-footer"
-  style="position: absolute;
-         bottom: 0;
-         width: 100%;
-        /* Set the fixed height of the footer here */
-        height: 60px;
-        background-color: #f5f5f5;">
-  <div class="container"
-    <p class="credit">
-      <a href="#">Queen's University Belfast</a>
-      <a href="#">Foundation for Prader-Willi Research</a>
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+  <div class="container">
+    <p class="navbar-text navbar-right">
+      <a href="#" class="navbar-link">Queen's University Belfast </a>
+      <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
     </p>
   </div>
-</div>
+</nav>
