--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       {% include navbar.html %}
       {% include header.html %}
       {{ content }}
+      {% include footer.html  %}
     </div>
     <!-- JavaScript -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
