--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-  <div class="container-fluid">
+  <div class="container">
     <p class="navbar-text navbar-left">
       <a href="#" class="navbar-link">Queen's University Belfast</a>  |  
       <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
