--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     <![endif]-->
   </head>
   <body style="padding-top:70px">
-    <div id="wrap">
       {% include navbar.html %}
+    <div id="container">
       {% include header.html %}
       {{ content }}
       {% include footer.html  %}
