--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
   </head>
   <body style="padding-top:70px">
       {% include navbar.html %}
+      {% include jumbotron.html %}
     <div class="container">
-      {% include header.html %}
       {{ content }}
-      {% include footer.html  %}
     </div>
+      {% include footer.html  %}
     <!-- JavaScript -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
