--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       {% include navbar.html %}
     <div class="container">
       {{ content }}
+      {% include footer.html %}
     </div>
     <!-- JavaScript -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
