--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-  <div class="container">
-    <p class="navbar-text navbar-left">
-      <a href="#" class="navbar-link">Queen's University Belfast</a>
-    </p>
-    <p class="navbar-text navbar-right">
-      <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
-    </p>
-  </div>
-</nav>
+<div class="container">
+  <a href="#" class="navbar-link">Queen's University Belfast</a>  |  
+  <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
+</div>
