--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="text-align:center">
   <a href="#" class="navbar-link">Queen's University Belfast</a>  |  
   <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
 </div>
