--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,8 @@
 <div id="container" style="text-align:center">
-  <a href="#" class="navbar-link">Queen's University Belfast</a>  |  
-  <a href="#" class="navbar-link">Foundation for Prader-Willi Research</a>
+  <ul>
+    <li><a href="#">Queen's University Belfast</a></li>
+    <li>&middot;</li>
+    <li><a href="#">Foundation for Prader-Willi Research</a></li>
+    <li>&middot;</li>
+  </ul>
 </div>
