--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
-<div id="container" style="text-align:center">
-  <ul>
-    <li><a href="#">Queen's University Belfast</a></li>
-    <li>&middot;</li>
-    <li><a href="#">Foundation for Prader-Willi Research</a></li>
-    <li>&middot;</li>
-  </ul>
+<div id="footer" style="text-align:center">
+  <a href="#">Queen's University Belfast</a>
+  &middot;
+  <a href="#">Foundation for Prader-Willi Research</a>
+  &middot;
 </div>
