--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
-<div id="footer" style="text-align:center">
-  <a href="#">Queen's University Belfast</a>
+<div class="footer" style="text-align:center">
+  <a href="#">Queen's University Belfast </a>
   &middot;
-  <a href="#">Foundation for Prader-Willi Research</a>
-  &middot;
+  <a href="#"> Foundation for Prader-Willi Research</a>
 </div>
