--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer" style="text-align:center">
-  <a href="#">Queen's University Belfast</a>
+  <a href="http://www.qub.ac.uk/schools/psy/">School of Psychology, Queen's University Belfast</a>
   &middot;
-  <a href="#">Foundation for Prader-Willi Research</a>
+  <a href="http://www.fpwr.org/">Foundation for Prader-Willi Research</a>
 </div>
