--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,15 +17,18 @@
         <li><a href="{{site.url}}/about">About</a></li>
         <li><a href="{{site.url}}/blog">Blog</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Information for Participants<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/games">Evaluation of Existing Games</a></li>
+            <li><a href="{{site.url}}/games">Guide for Participants</a></li>
+            <li><a href="{{site.url}}/games">Game List</a></li>
+            <!--
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
+            -->
           </ul>
         </li>
       </ul>
