--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/games">Guide for Participants</a></li>
+            <li><a href="{{site.url}}/guide">Guide for Participants</a></li>
             <li><a href="{{site.url}}/games">Game List</a></li>
             <!--
             <li><a href="#">Another action</a></li>
