--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </head>
   <body style="padding-top:70px">
       {% include navbar.html %}
-    <div class="container" align="center">
+    <div class="container">
       {{ content }}
       {% include footer.html %}
     </div>
