--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<div id="title">
+        <h3>{{page.title}}</h3>
+</div>
+<div id="post_date">
+        <p>{{post.date}}</p>
+</div>
 <div id="post">
 {{ content }}
 </div>
