--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
         <h3>{{page.title}}</h3>
 </div>
 <div id="post_date">
-        <p>{{post.date}}</p>
+        <p>{{ post.date | date_to_string }}</p>
 </div>
 <div id="post">
 {{ content }}
