--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,9 @@ layout: default
 <div id="title">
         <h3>{{page.title}}</h3>
 </div>
+<div id="post_date">
+        <p>{{ date | date_to_string }}</p>
+</div>
 <div id="post">
 {{ content }}
 </div>
