--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -29,5 +29,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <!-- validation for forms -->
+    <script src="{{site.url}}/js/validator.js"></script>
   </body>
 </html>
