--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -42,11 +42,10 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Twitter Link</a></li>
-        <li><a href="#">Feed Link</a></li>
-      </ul>
       -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://twitter.com/TasterProject"><i class="fa fa-twitter"></i></a></li>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
