--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -44,7 +44,11 @@
       </form>
       -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://twitter.com/TasterProject"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://twitter.com/TasterProject">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-square-o fa-stack-2x"></i>
+            <i class="fa fa-twitter fa-stack-1x"></i>
+          </span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
