--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -44,7 +44,7 @@
       </form>
       -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://twitter.com/TasterProject"><i class="fa fa-twitter fa-2x"></i></li>
+        <li><a href="https://twitter.com/TasterProject"><i class="fa fa-twitter fa-2x"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
