--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
 </div>
 <div id="post">
 {{ content }}
+<div id="credit">Posted by {{post.post_author}}</div>
 </div>
 
 <div id="page-navigation">
