--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 <div id="post">
 {{ content }}
-<div id="credit">Posted by {{page.post_author}}</div>
+<div id="credit"><small>Posted by {{page.post_author}}</small></div>
 </div>
 
 <div id="page-navigation">
