--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 <div id="post">
 {{ content }}
-<div id="credit"><small>Posted by {{page.post_author}}</small></div>
+<p class="text-right"><small>Posted by {{page.post_author}}</small></p>
 </div>
 
 <div id="page-navigation">
