--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,22 @@
 ---
 layout: default
 ---
-<div id="title">
-        <h3>{{page.title}}</h3>
+<div class="row">
+<div class="col-md-12">
+<h3>{{page.title}}</h3>
 </div>
-<div id="post_date">
-        <p>{{ page.date | date_to_string }}</p>
+<div class="col-md-11">
+<p>{{ page.date | date_to_string }}</p>
+<!-- Twitter Share button -->
+<div class="col-md-1">
+        
 </div>
-<div id="post">
+<div class="col-md-12">
 {{ content }}
 <p class="text-right"><small>Posted by {{page.post_author}}</small></p>
 </div>
 
-<div id="page-navigation">
+<div class="col-md-12">
         <div class="clear">&nbsp;</div>
         <div style="float: left;" class="left">
         {% if page.previous.url %}
@@ -28,4 +32,5 @@ layout: default
         {% endif %}
         </div>
         <div class="clear">&nbsp;</div>
-</div> 
+  </div>
+</div>
