--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 <p>{{ page.date | date_to_string }}</p>
 <!-- Twitter Share button -->
 <div class="col-md-1">
-        
+        twitter share button
 </div>
 <div class="col-md-12">
 {{ content }}
