--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,35 +2,33 @@
 layout: default
 ---
 <div class="row">
-<div class="col-md-12">
-<h3>{{page.title}}</h3>
-</div>
-<div class="col-md-11">
-<p>{{ page.date | date_to_string }}</p>
-<!-- Twitter Share button -->
-<div class="col-md-1">
-        twitter share button
-</div>
-<div class="col-md-12">
-{{ content }}
-<p class="text-right"><small>Posted by {{page.post_author}}</small></p>
-</div>
+  <div class="col-md-12">
+    <h3>{{page.title}}</h3>
+  </div>
+  <div class="col-md-11">
+    <p>{{ page.date | date_to_string }}</p>
+    <!-- Twitter Share button -->
+   </div>
+  <div class="col-md-1">
+    twitter share button
+  </div>
+  <div class="col-md-12">
+    {{ content }}
+    <p class="text-right"><small>Posted by {{page.post_author}}</small></p>
+  </div>
 
-<div class="col-md-12">
-        <div class="clear">&nbsp;</div>
-        <div style="float: left;" class="left">
+  <div class="col-md-12">
+    <div class="clear">&nbsp;</div>
+      <div style="float: left;" class="left">
         {% if page.previous.url %}
-                <a href="{{page.previous.url}}" title="Previous Post:
-{{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+          <a href="{{page.previous.url}}" title="Previous Post:{{page.previous.title}}">&laquo; {{page.previous.title}}</a>
         {% endif %}
-        </div>
-
-        <div style="float: right;" class="right">
-        {% if page.next.url %}
-                <a href="{{page.next.url}}" title="next Post:
-{{page.next.title}}">{{page.next.title}} &raquo; </a>
-        {% endif %}
-        </div>
-        <div class="clear">&nbsp;</div>
+      </div>
+  <div style="float: right;" class="right">
+    {% if page.next.url %}
+      <a href="{{page.next.url}}" title="next Post:{{page.next.title}}">{{page.next.title}} &raquo; </a>
+    {% endif %}
+  </div>
+    <div class="clear">&nbsp;</div>
   </div>
 </div>
