--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
     <p>{{ page.date | date_to_string }}</p>
    </div>
   <div class="col-md-1">
+  <!-- Twitter Share Button -->
     <a href="https://twitter.com/share" class="twitter-share-button" data-via="TasterProject" data-count="none" data-dnt="true">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
   <div class="col-md-12">
