--- a/_includes/navbar_it.html
+++ b/_includes/navbar_it.html
@@ -14,8 +14,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{site.url}}/about">About</a></li>
-        <li><a href="{{site.url}}/blog">Blog</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Partecipanti<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -45,6 +43,7 @@
       -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://twitter.com/TasterProject"  target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="{{ site.url }}">English site</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
