--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -45,6 +45,7 @@
       -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://twitter.com/TasterProject"  target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="{{ site.url }}/it/">Sito italiano</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
