--- a/_includes/footer_it.html
+++ b/_includes/footer_it.html
@@ -2,4 +2,7 @@
   <a href="http://www.qub.ac.uk/schools/psy/">School of Psychology, Queen's University Belfast</a>
   &middot;
   <a href="http://www.fpwr.org/">Foundation for Prader-Willi Research</a>
+  <p>
+    la ricerca in Italia è effettuata grazie al contributo di azzurra associazione malattie rare e fondazione prosolidar
+  </p>
 </div>
