--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <div class="footer" style="text-align:center">
-  <a href="http://www.qub.ac.uk/schools/psy/">School of Psychology, Queen's University Belfast</a>
+  <a href="http://www.qub.ac.uk/schools/psy/">
+  <img border="0" alt="School of Psychology, Queen's University Belfast" src="images/qub.png" width="100"</a>
   &middot;
   <a href="http://www.fpwr.org/">Foundation for Prader-Willi Research</a>
 </div>
