--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,6 @@
   <a href="http://www.qub.ac.uk/schools/psy/">
   <img border="0" alt="School of Psychology, Queen's University Belfast" src="images/qub.png" width="100"</a>
   &middot;
-  <a href="http://www.fpwr.org/">Foundation for Prader-Willi Research</a>
+  <a href="http://www.fpwr.org/">
+  <img border="0" alt="Foundation for Prader-Willi Research" src="images/fpwr.jpg" width="100"</a></a>
 </div>
