--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer" style="text-align:center">
   <a href="http://www.qub.ac.uk/schools/psy/">
-  <img border="10" alt="School of Psychology, Queen's University Belfast" src="{{ site.url }} images/qub.png" width="100"</a>
+  <img border="10" alt="School of Psychology, Queen's University Belfast" src="{{ site.url }}/images/qub.png" width="100"</a>
   <a href="http://www.fpwr.org/">
-  <img border="10" alt="Foundation for Prader-Willi Research" src="{{ site.url }} images/fpwr.jpg" width="100"</a></a>
+  <img border="10" alt="Foundation for Prader-Willi Research" src="{{ site.url }}/images/fpwr.jpg" width="100"</a></a>
 </div>
