--- a/_includes/footer_it.html
+++ b/_includes/footer_it.html
@@ -3,8 +3,8 @@
   <img border="10" alt="School of Psychology, Queen's University Belfast" src="{{ site.url }}/images/qub.png" width="100"</a>
   <a href="http://www.fpwr.org/">
   <img border="10" alt="Foundation for Prader-Willi Research" src="{{ site.url }}/images/fpwr.jpg" width="100"</a></a>
-  //<a href="http://www.qub.ac.uk/schools/psy/">
-  <img border="10" alt="Azzurra Associazione Malattie Rare" src="{{ site.url }}/images/assurra.JPG" width="100"</a>
-  //<a href="http://www.fpwr.org/">
+  <a href="http://www.azzurramalattierare.it/chi.php">
+  <img border="10" alt="Azzurra Associazione Malattie Rare" src="{{ site.url }}/images/azzurra.JPG" width="100"</a>
+  <a href="http://www.prosolidar.eu/">
   <img border="10" alt="Fondazione Prosolidar" src="{{ site.url }}/images/prosolidar.jpg" width="100"</a></a>
 </div>
