--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,6 +24,7 @@
             <li class="divider"></li>
             <li><a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a></li>
             <li><a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a></li>
+            <li><a href="{{site.url}}/finalFeedbackForm">Final Feedback Form</a></li>
             <!--
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
