--- a/_includes/navbar_it.html
+++ b/_includes/navbar_it.html
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{site.url}}/it/about">Chi Simao</a></li>
+        <li><a href="{{site.url}}/it/about">Chi Siamo</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Partecipanti<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
