--- a/_includes/navbar_it.html
+++ b/_includes/navbar_it.html
@@ -23,6 +23,7 @@
             <li class="divider"></li>
             <li><a href="{{site.url}}/it/initialComprehensionForm">Modulo di Comprensione Iniziale</a></li>
             <li><a href="{{site.url}}/it/dailyFeedbackForm">Modulo Feedback Quotidiano</a></li>
+            #<li><a href="{{site.url}}/it/finalFeedbackForm">Modulo Feedback Finale</a></li>
             <!--
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
