--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,7 @@
             <li><a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a></li>
             <li><a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a></li>
             <li><a href="{{site.url}}/finalFeedbackForm">Final Feedback Form</a></li>
+            <li><a href="{{site.url}}/play-testing-feedback-form">Play Testing Feedback Form</a></li>
             <!--
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
