--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,10 +23,10 @@
             <li><a href="{{site.url}}/guide">Guide for Participants</a></li>
             <li><a href="{{site.url}}/games">Game List</a></li>
             <li class="divider"></li>
+            <li><a href="{{site.url}}/play-testing-feedback-form">*NEW* Play Testing Feedback Form</a></li>
             <li><a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a></li>
             <li><a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a></li>
             <li><a href="{{site.url}}/finalFeedbackForm">Final Feedback Form</a></li>
-            <li><a href="{{site.url}}/play-testing-feedback-form">Play Testing Feedback Form</a></li>
             <!--
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
