--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,5 +34,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <!-- validation for forms -->
     <script src="{{site.url}}/js/validator.js"></script>
+    <!-- to hide email -->
+    <script src={{site.url}}/js/GetMail.js></script>
   </body>
 </html>
