--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{{site.url}}/about">About</a></li>
         <li><a href="{{site.url}}/blog">Blog</a></li>
-        <li><a href="{{site.url}}/desktop">Deskdtop</a></li>
+        <li><a href="{{site.url}}/desktop">Desktop</a></li>
         <li><a href="{{site.url}}/play/mobile">Mobile</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
