--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,22 +22,12 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="{{site.url}}/game-questionnaire">*NEW* Give feedback about the game</a></li>
-            <!--
-            <li><a href="{{site.url}}/play-testing">Play testing</a></li>
-            <li><a href="{{site.url}}/guide">Guide for Participants</a></li>
-            <li><a href="{{site.url}}/games">Game List</a></li>
-            <li class="divider"></li>
-            <li><a href="{{site.url}}/play-testing-feedback-form">Play Testing Feedback Form</a></li>
-            <li><a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a></li>
-            <li><a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a></li>
-            <li><a href="{{site.url}}/finalFeedbackForm">Final Feedback Form</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-            -->
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Play the game<span class="caret"></span></a>
+            <li><a href="{{site.url}}/desktop">Desktop</a></li>
+            <li><a href="{{site.url}}/play/mobile">Mobile</a></li>
           </ul>
         </li>
       </ul>
