--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,8 +16,6 @@
       <ul class="nav navbar-nav">
         <li><a href="{{site.url}}/about">About</a></li>
         <li><a href="{{site.url}}/blog">Blog</a></li>
-        <li><a href="{{site.url}}/desktop">Desktop</a></li>
-        <li><a href="{{site.url}}/play/mobile">Mobile</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -26,6 +24,7 @@
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Play the game<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
             <li><a href="{{site.url}}/desktop">Desktop</a></li>
             <li><a href="{{site.url}}/play/mobile">Mobile</a></li>
           </ul>
