--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,8 +25,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Play the game<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/desktop">Desktop</a></li>
-            <li><a href="{{site.url}}/play/mobile">Mobile</a></li>
+            <li><a href="{{site.url}}/play">Desktop</a></li>
+            <li><a href="{{site.url}}/mobile/play">Mobile</a></li>
           </ul>
         </li>
       </ul>
