--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{site.url}}">{{site.name}}</a>
+      <a class="navbar-brand" href="http://tasterproject.com/">{{site.name}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,7 +25,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Play the game<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/play">Desktop</a></li>
+            <li><a href="http://tasterproject.com/play">Desktop</a></li>
             <li><a href="{{site.url}}/mobile/play">Mobile</a></li>
           </ul>
         </li>
