--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,25 +8,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://tasterproject.com/">{{site.name}}</a>
+      <a class="navbar-brand" href="http://tasterproject.com/">TASTER</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{site.url}}/about">About</a></li>
-        <li><a href="{{site.url}}/blog">Blog</a></li>
+        <li><a href="http://tasterproject.com/about">About</a></li>
+        <li><a href="http://tasterproject.com/blog">Blog</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">For Participants<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/game-questionnaire">Give feedback about the game</a></li>
+            <li><a href="http://tasterproject.com/game-questionnaire">Give feedback about the game</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Play the game<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="http://tasterproject.com/play">Desktop</a></li>
-            <li><a href="{{site.url}}/mobile/play">Mobile</a></li>
+            <li><a href="http://tasterproject.com/mobile/play">Mobile</a></li>
           </ul>
         </li>
       </ul>
@@ -40,7 +40,7 @@
       -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://twitter.com/TasterProject"  target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="{{ site.url }}/it/">Sito italiano</a></li>
+        <li><a href="http://tasterproject.com//it/">Sito italiano</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
