--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://tasterproject.com/">TASTER</a>
+      <a class="navbar-brand" href="http://tasterproject.com/">Taster</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
