--- a/_includes/navbar_it.html
+++ b/_includes/navbar_it.html
@@ -8,17 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{site.url}}/it">{{site.name}}</a>
+      <a class="navbar-brand" href="http://tasterproject.com/it">{{site.name}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{site.url}}/it/about">Chi Siamo</a></li>
+        <li><a href="http://tasterproject.com/it/about">Chi Siamo</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Partecipanti<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="{{site.url}}/it/games">Giochi</a></li>
+            <li><a href="http://tasterproject.com/it/games">Giochi</a></li>
             <!--
             <li><a href="{{site.url}}/it/guide">Guida per i partecipanti</a></li>
             <li class="divider"></li>
@@ -45,7 +45,7 @@
       -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://twitter.com/TasterProject"  target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="{{ site.url }}">English site</a></li>
+        <li><a href="http://tasterproject.com/">English site</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
