--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,6 +39,8 @@
       </form>
       -->
       <ul class="nav navbar-nav navbar-right">
+        
+        <li><a href="https://twitter.com/taster_project/"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
         <li><a href="http://tasterproject.com//it/">Sito italiano</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
